src/test/deca/context/valid/Objet/Add-Field.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      nothing
//
// History:
//      created on 19/1/2022

class A {
    int x;
}

class B {
    int x;
}

{
    A a = new A();
    B b = new B();
    float y = a.x + b.x;
}